scrollbar fixed, added time to message box

--- a/src/components/main/index.css
+++ b/src/components/main/index.css
@@ -48,7 +48,7 @@ button {
 .chatbox {
     background-color: aliceblue;
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
